--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="red">#FA5858</color>
+    <color name="green">#6ACD75</color>
+    <color name="blue">#58ACFA</color>
+    <color name="yellow">#FFF23B</color>
+    <color name="grey">#6E6E6E</color>
+    <color name="black">#000000</color>
 </resources>
