--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,7 @@
             android:id="@+id/channel_name_display"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="@string/channel_name_label"
             android:textColor="#000000"
             android:textStyle="bold" />
 
@@ -30,6 +31,15 @@
             android:id="@+id/user_name_display"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="@string/user_name_label"
+            android:textColor="#000000"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/streams_display_label"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/streams_display_label"
             android:textColor="#000000"
             android:textStyle="bold" />
 
