Added progress bars for producers on UI, modified progress bar UI logic so that newer progress bars are at the top of the list

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#D81B60</color>
     <color name="red">#FA5858</color>
     <color name="green">#6ACD75</color>
-    <color name="blue">#58ACFA</color>
+    <color name="blue">#554FFF</color>
     <color name="yellow">#FFF23B</color>
     <color name="grey">#6E6E6E</color>
     <color name="black">#000000</color>
