Added successful data retrieval timer limit (i.e., fetching of stream will be cancelled if data not successfully retrieved after a certain time period)

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="blue">#554FFF</color>
     <color name="yellow">#FFF23B</color>
     <color name="grey">#6E6E6E</color>
+    <color name="light_grey">#CFCDCC</color>
     <color name="black">#000000</color>
 </resources>
