--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -157,6 +157,63 @@
                 android:paddingTop="0dp" />
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/consumer_max_historical_stream_fetch_time_ms_input_label"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Max Historical Stream Fetch Time (ms):"
+                android:textColor="?attr/actionModeSplitBackground"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/consumer_max_historical_stream_fetch_time_ms_input"
+                android:layout_width="94dp"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:paddingTop="0dp" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/network_settings_label"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Network Settings"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="5dp"
+            android:textColor="#000000"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/access_point_ip_address_input_label"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Access Point IP Address:"
+                android:textColor="?attr/actionModeSplitBackground"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/access_point_ip_address_input"
+                android:layout_width="193dp"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:paddingTop="0dp" />
+        </LinearLayout>
+
         <Button
             android:id="@+id/ok_button"
             android:layout_width="match_parent"
