--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -180,6 +180,52 @@
                 android:paddingTop="0dp" />
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/consumer_max_successful_data_fetch_interval_ms_input_label"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Max Successful Data Fetch Interval (ms):"
+                android:textColor="?attr/actionModeSplitBackground"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/consumer_max_successful_data_fetch_interval_ms_input"
+                android:layout_width="85dp"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:paddingTop="0dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/consumer_max_meta_data_fetch_time_ms_input_label"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Max Meta Data Fetch Time (ms):"
+                android:textColor="?attr/actionModeSplitBackground"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/consumer_max_meta_data_fetch_time_ms_input"
+                android:layout_width="141dp"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:paddingTop="0dp" />
+        </LinearLayout>
+
         <TextView
             android:id="@+id/network_settings_label"
             android:layout_width="match_parent"
