--- a/app/src/main/res/layout/fragment_progress_bar.xml
+++ b/app/src/main/res/layout/fragment_progress_bar.xml
@@ -41,7 +41,8 @@
             android:layout_width="match_parent"
             android:layout_height="15dp"
             android:orientation="horizontal"
-            android:layout_marginTop="2dp">
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="2dp">
 
             <com.example.ndnpttv2.front_end.custom_progress_bar.CustomProgressBar
                 android:id="@+id/progress_bar"
