--- a/app/src/main/res/layout/fragment_progress_bar.xml
+++ b/app/src/main/res/layout/fragment_progress_bar.xml
@@ -20,34 +20,52 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginBottom="2dp">
 
             <TextView
                 android:id="@+id/name_display"
-                android:layout_width="295dp"
+                android:layout_width="230dp"
                 android:layout_height="wrap_content"
                 android:textColor="#000000" />
 
+            <ImageButton
+                android:id="@+id/fetch_button"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:minWidth="0dp"
+                android:minHeight="0dp"
+                android:paddingLeft="10dp"
+                android:paddingTop="10dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="10dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/replay" />
+
             <ImageView
                 android:id="@+id/image_label"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:layout_marginLeft="35dp"
                 android:layout_weight="1"
                 android:scaleType="fitCenter"
                 android:src="@drawable/ic_launcher_background" />
+
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="15dp"
-            android:orientation="horizontal"
             android:layout_marginTop="2dp"
-            android:layout_marginBottom="2dp">
+            android:layout_marginBottom="2dp"
+            android:orientation="horizontal">
 
             <com.example.ndnpttv2.front_end.custom_progress_bar.CustomProgressBar
                 android:id="@+id/progress_bar"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="15dp"
+                android:layout_marginTop="0dp"
                 android:max="100"
                 android:paddingLeft="0dp"
                 android:paddingRight="0dp"
