--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -262,11 +262,45 @@
                 android:paddingTop="0dp" />
         </LinearLayout>
 
-        <Button
-            android:id="@+id/ok_button"
+        <TextView
+            android:id="@+id/miscellaneous_settings_label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="OK" />
+            android:text="Miscellaneous Settings"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="5dp"
+            android:textColor="#000000"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/debug_logging_enabled_input_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Debug Logging Enabled:"
+                android:textColor="?attr/actionModeSplitBackground"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
+            <CheckBox
+                android:id="@+id/debug_logging_enabled_input"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <Button
+                android:id="@+id/ok_button"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:text="START" />
+
+
+        </LinearLayout>
 
     </LinearLayout>
 
