--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="5dp"
+            android:layout_marginBottom="2dp"
             android:text="Channel Settings"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -77,7 +77,7 @@
             android:layout_height="wrap_content"
             android:text="Stream Production Settings"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="5dp"
+            android:layout_marginBottom="2dp"
             android:textColor="#000000"
             android:textSize="16sp"
             android:textStyle="bold" />
@@ -131,7 +131,7 @@
             android:layout_height="wrap_content"
             android:text="Stream Consumption Settings"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="5dp"
+            android:layout_marginBottom="2dp"
             android:textColor="#000000"
             android:textSize="16sp"
             android:textStyle="bold" />
@@ -234,7 +234,7 @@
             android:layout_height="wrap_content"
             android:text="Network Settings"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="5dp"
+            android:layout_marginBottom="2dp"
             android:textColor="#000000"
             android:textSize="16sp"
             android:textStyle="bold" />
@@ -268,7 +268,7 @@
             android:layout_height="wrap_content"
             android:text="Miscellaneous Settings"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="5dp"
+            android:layout_marginBottom="2dp"
             android:textColor="#000000"
             android:textSize="16sp"
             android:textStyle="bold" />
@@ -278,25 +278,61 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/debug_logging_enabled_input_label"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Debug Logging Enabled:"
-                android:textColor="?attr/actionModeSplitBackground"
-                android:textSize="15sp"
-                android:textStyle="bold" />
+                android:orientation="vertical">
 
-            <CheckBox
-                android:id="@+id/debug_logging_enabled_input"
-                android:layout_width="50dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/debug_logging_enabled_input_label"
+                        android:layout_width="170dp"
+                        android:layout_height="wrap_content"
+                        android:text="Debug Logging Enabled:"
+                        android:textColor="?attr/actionModeSplitBackground"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
+
+                    <CheckBox
+                        android:id="@+id/debug_logging_enabled_input"
+                        android:layout_width="50dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/error_logging_enabled_input_label"
+                        android:layout_width="170dp"
+                        android:layout_height="wrap_content"
+                        android:text="Error Logging Enabled:"
+                        android:textColor="?attr/actionModeSplitBackground"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
+
+                    <CheckBox
+                        android:id="@+id/error_logging_enabled_input"
+                        android:layout_width="50dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1" />
+
+                </LinearLayout>
+
+            </LinearLayout>
 
             <Button
                 android:id="@+id/ok_button"
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:text="START" />
 
 
